# FlexibleRoaringBitmap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang-format.sh
examples/: CMakeLists.txt  example.cpp  mem_measure.cpp
include/: api.h  array_container.h  binsearch_index.h  bitmap_container.h  froaring.h  handle.h  mix_ops.h  prelude.h  rle_container.h  transform.h  utils.h
include/froaring_api/: and.h  and_inplace.h  array_container.h  bitmap_container.h  contains.h  diff.h  diff_inplace.h  equal.h  handle.h  intersects.h  mix_ops.h  or.h  or_inplace.h  prelude.h  rle_container.h  utils.h
lib/: array_container.h  binsearch_index.h  bitmap_container.h  containers.h  froaring.h  handle.h  prelude.h  rle_container.h  utils.h
lib/froaring_api/: equal.h
tests/: CMakeLists.txt  array_container.cpp  bitmap_container.cpp  container_and.cpp  container_diff.cpp  container_diff_inplace.cpp  container_or_inplace.cpp  froaring_and.cpp  froaring_and_inplace.cpp  froaring_assignment.cpp  froaring_contains.cpp  froaring_diff.cpp  froaring_intersects.cpp  froaring_iterator.cpp  froaring_or.cpp  froaring_or_inplace.cpp  integration_test.cpp  rle_container.cpp  test_and.cpp  test_array_container.cpp  test_bitmap_container.cpp  test_or.cpp  test_rle_container.cpp
